# forest-fire

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  TODO.md  Taskfile.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml  publish-python.yaml  python.yaml  rust.yaml
benchmark/: common.py  moons_benchmark.py  predict_benchmark.py  predict_micro_benchmark.py  pyproject.toml  regression_benchmark.py  render_saved_results.py  train_benchmark.py  train_micro_benchmark.py
bindings/python/: Cargo.toml  LICENSE  PYPI.md  README.md  forestfire.pyi  pyproject.toml
bindings/python/_forestfire/: __init__.py
bindings/python/forestfire/: lib.rs
bindings/python/python/forestfire/: __init__.py  _api.py  _categorical.py  _core.pyi  _sklearn.py  forest.py  gbm.py  tree.py
bindings/python/src/: lib.rs
crates/core/: Cargo.toml
crates/core/examples/: gbm_parallel_timing.rs  rf_parallel_timing.rs
crates/core/schema/: forestfire-ir.schema.json
crates/core/src/: boosting.rs  bootstrap.rs  categorical.rs  compiled_artifact.rs  config.rs  errors.rs  forest.rs  inference_input.rs  introspection.rs  ir.rs  lib.rs  mean_tree.rs  model_api.rs  optimized_runtime.rs  runtime_planning.rs  sampling.rs  tests.rs  training.rs
crates/core/src/tree/: classifier.rs  mean_tree.rs  mod.rs  oblique.rs  regressor.rs  second_order.rs  shared.rs
crates/core/src/tree/classifier/: histogram.rs  ir_support.rs  oblivious.rs  partitioning.rs  split_scoring.rs  tests.rs
crates/data/: Cargo.toml
crates/data/src/: categorical.rs  lib.rs
crates/inference/: Cargo.toml
crates/inference/src/: lib.rs  regressor.rs
docs/: beam-builder.md  benchmarks.md  canaries.md  cargo-release.md  categorical-strategies.md  design.md  examples.md  getting-started.md  index.md  ir.md  lookahead-builder.md  missing-values.md  models.md  next-steps.md  oblique-splits.md  optimal-builder.md  pypi-release.md  python-api.md  runtime.md  rust-api.md  training.md
docs/benchmarks/: inference_benchmark_results.json  moons_results_gradient_boosting.json  moons_results_random_forest.json  moons_summary_gradient_boosting.md  moons_summary_random_forest.md  prediction_benchmark_results.json  prediction_benchmark_results_gradient_boosting_classification.json  prediction_grid_results_gradient_boosting_classification.json  prediction_grid_results_gradient_boosting_regression.json  prediction_grid_results_random_forest_classification.json  prediction_grid_results_random_forest_regression.json  prediction_micro_results_gradient_boosting_classification.json  prediction_micro_results_random_forest_regression.json  prediction_micro_summary_gradient_boosting_classification.md  prediction_micro_summary_random_forest_regression.md  prediction_summary_gradient_boosting_classification.md  prediction_summary_gradient_boosting_regression.md  prediction_summary_random_forest_classification.md  prediction_summary_random_forest_regression.md  regression_curve_results_gradient_boosting.json  regression_curve_results_random_forest.json  regression_curve_summary_gradient_boosting.md  regression_curve_summary_random_forest.md  regression_surface_results_gradient_boosting.json  regression_surface_results_random_forest.json  regression_surface_summary_gradient_boosting.md  regression_surface_summary_random_forest.md  training_benchmark_results.json  training_benchmark_results_gradient_boosting_classification.json  training_grid_results_gradient_boosting_classification.json  training_grid_results_gradient_boosting_regression.json  training_grid_results_random_forest_classification.json  training_grid_results_random_forest_regression.json  training_micro_results_gradient_boosting_classification.json  training_micro_results_gradient_boosting_regression.json  training_micro_results_random_forest_classification.json  training_micro_results_random_forest_regression.json  training_micro_summary_gradient_boosting_classification.md  training_micro_summary_gradient_boosting_regression.md  training_micro_summary_random_forest_classification.md  (+5 more)
examples/python/: mean_tree.py  showcase.py
examples/rust/: Cargo.toml  mean_tree.rs  showcase.rs
scripts/: benchmark_inference.py
tests/python/: test_categorical.py  test_mean_tree.py  test_sklearn_wrappers.py  test_train.py
tests/rust/: mean_tree.rs
