[project]
name = "forestfire-workspace"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["bindings/python", "benchmark"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "numpy>=2.1.0",
    "matplotlib>=3.10,<4",
    "maturin>=1.4,<2",
    "isort>=5.13,<6",
    "mypy>=1.17,<2",
    "pre-commit>=4,<5",
    "ruff>=0.12,<1",
    "yamlfix>=1.17,<2",
    "yamllint>=1.37,<2",
]

[tool.isort]
profile = "black"
skip_gitignore = true
extend_skip = [".cache", ".git", ".venv", "target"]

[tool.ruff]
extend-exclude = [".cache", ".git", ".venv", "target"]
