[package]
name = "forestfire-python"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "forestfire"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
numpy = "0.26"

forestfire-core = { path = "../../crates/core" }
forestfire-data = { path = "../../crates/data" }
