[package]
name = "forestfire-python"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/wsperat/forest-fire"
description = "Python extension module for the ForestFire tree-learning library."

[lib]
name = "forestfire"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
numpy = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

forestfire-core = { path = "../../crates/core" }
forestfire-data = { path = "../../crates/data" }
