[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "forestfire-python"
version = "0.0.1"
description = "Forestfire Python bindings (mean-tree baseline)"
authors = [{ name = "forestfire contributors" }]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
]

[tool.maturin]
module-name = "forestfire"
include = ["forestfire.pyi"]

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "numpy>=2,<3",
  "maturin>=1.4,<2",
]
