[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "forestfire"
version = "0.1.4"
description = "Tree-based learning in Rust with a Python API."
readme = "PYPI.md"
license = "MIT"
authors = [{ name = "forestfire contributors" }]
requires-python = ">=3.12"
keywords = ["decision trees", "random forest", "gradient boosting", "machine learning", "rust"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=2,<3",
]

[project.urls]
Homepage = "https://github.com/wsperat/forest-fire"
Repository = "https://github.com/wsperat/forest-fire"
Issues = "https://github.com/wsperat/forest-fire/issues"

[project.optional-dependencies]
polars = [
  "polars>=1,<2",
]
pyarrow = [
  "pyarrow>=19,<20",
]

[tool.maturin]
module-name = "forestfire"
include = ["forestfire.pyi", "PYPI.md", "LICENSE"]

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "numpy>=2,<3",
  "pyarrow>=18,<20",
  "maturin>=1.4,<2",
]
