[package]
name = "forestfire-core"
version = "0.6.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/wsperat/forest-fire"
description = "Core tree-learning algorithms for the ForestFire project."

[features]
default = []
polars = ["dep:polars"]

[dependencies]
arrow.workspace = true
forestfire-data = { version = "0.6.0", path = "../data" }
num_cpus.workspace = true
rand.workspace = true
polars = { version = "0.46", optional = true, default-features = false, features = ["lazy"] }
rayon.workspace = true
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
wide = "0.7"
