[package]
name = "forestfire-data"
version = "0.5.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/wsperat/forest-fire"
description = "Tabular data preprocessing and storage for ForestFire."

[dependencies]
arrow.workspace = true
rand.workspace = true
serde = { version = "1.0", features = ["derive"] }
