[package]
name = "forestfire-inference"
version = "0.3.0"
edition = "2024"
publish = false
license = "MIT"
repository = "https://github.com/wsperat/forest-fire"
description = "Shared inference-facing traits and helpers for ForestFire."

[dependencies]
forestfire-core = { version = "0.3.0", path = "../core" }
forestfire-data = { version = "0.3.0", path = "../data" }
arrow.workspace = true
