[package]
name = "forestfire-inference"
version = "0.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/wsperat/forest-fire"
description = "Inference-facing traits and helpers for ForestFire models."

[dependencies]
forestfire-core = { version = "0.5.1", path = "../core" }
forestfire-data = { version = "0.5.1", path = "../data" }
arrow.workspace = true
