[package]
name = "forestfire-rust-examples"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT"
repository = "https://github.com/wsperat/forest-fire"
description = "Runnable Rust examples for the ForestFire project."

[dependencies]
forestfire-core = { version = "0.5.1", path = "../../crates/core" }
forestfire-data = { version = "0.5.1", path = "../../crates/data" }

[[bin]]
name = "showcase"
path = "showcase.rs"
